--- a/GameStore/GameStore.csproj
+++ b/GameStore/GameStore.csproj
@@ -19,6 +19,8 @@
     <Compile Remove="Migrations\20221123121907_SecondMigration.Designer.cs" />
     <Compile Remove="Migrations\20221123122539_InitialMigration.cs" />
     <Compile Remove="Migrations\20221123122539_InitialMigration.Designer.cs" />
+    <Compile Remove="Migrations\20221124112322_SecondMigration.cs" />
+    <Compile Remove="Migrations\20221124112322_SecondMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
