--- a/GameStore/appsettings.json
+++ b/GameStore/appsettings.json
@@ -10,5 +10,11 @@
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-    "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "Secret": "strong-key-for-key-generation",
+    "Audience": "User",
+    "Issuer": "https://localhost:5001/"
   }
+}
